build: Se agrega dependencia Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=data-unsis-backend
+#Path to swagger documentation
+springdoc.api-docs.path=/api-docs
+#URL PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/data_unsis_backend
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+#Driver PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+#Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
