--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.application.name=dynamicSQLTest
+spring.application.name=DATA-UNSIS-BACKEND
 spring.datasource.url=jdbc:postgresql://localhost:5432/dyn_query_test
 spring.datasource.username=postgres
-spring.datasource.password=Joan2604
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
+springdoc.swagger-ui.path=/swagger-ui
