--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=DATA-UNSIS-BACKEND
-spring.datasource.url=jdbc:postgresql://localhost:5432/dyn_query_test
+#Cambiar la base si es necesario para probar
+spring.datasource.url=jdbc:postgresql://localhost:5432/dyn_query_test2
 spring.datasource.username=postgres
 #Cambiar contraseña si es necesario
 spring.datasource.password=lis
