feature#NUB-25 creación de servicio para el titulo AgeDistribution

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=DATA-UNSIS-BACKEND
-#Cambiar la base si es necesario para probar
-spring.datasource.url=jdbc:postgresql://localhost:5432/dyn_query_test2
+spring.datasource.url=jdbc:postgresql://localhost:5432/dyn_query_test
 spring.datasource.username=postgres
 #Cambiar contraseña si es necesario
 spring.datasource.password=lis
